spade-tests/src/snapshots/spade_tests__parser__item_contexts_are_cleared_on_error_recovery.snap
---
source: spade-tests/src/parser.rs
---
use std::ports;

entity test() {}

entity int32_to_float32(input: int<32>) -> uint<32> {
    test()
    test()
}

entity top(input: int<32>) -> uint<32> {}



error: Unexpected `identifier`, expected `}`
  ┌─ testinput:7:5
  │
7 │     test()
  │     ^^^^ expected `}`

error: Output type mismatch. Expected uint<32>, got ()
   ┌─ testinput:10:40
   │
10 │ entity top(input: int<32>) -> uint<32> {}
   │                               -------- ^^ Found type ()
   │                               │         
   │                               uint<32> type specified here
   │
   = note: Expected: uint<32>
                Got: ()
